# Face-Recognition-In-Rain

./: .gitignore  README.md  backend.py  database.py  frontend.py  launcher.py  launcher.spec  pi_camera.py  pyproject.toml  rain_utils.py  run.bat
backlog/: app.py  app_w_optimised_camera_feed.py  bu.py  derain.py  face_recognition_post_deraining.py
data/: app.db
